--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
   get: ^4.3.8
+  http: ^0.13.3
   shared_preferences: ^2.0.8
 
 dev_dependencies:
